--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <head>
 <body bgcolor=orange>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-<title>quien es juniorpocasangre?</title>
+<title>quien?</title>
 </head>
 <body>
 <font face="calibri" size=8</font>
-<h1 class="animated jello"><stone>¿QUIEN SOY YO?</stone></h1
-<p>
-<font cite="calibri" size=5</font>
-<cite class="animated infinite fadeIn"><font color="purple" size=3> autor:JuniorPocasangre</font></cite>
-<p>
-hola me llamo jairo pocasangre jajaja adadnawdadadlndnakwdnalkwdalwdnawndklawdnawkdnaldnawndlawndlwndawdandawndwandandlawdnlwndlakwdnawkd
-abadbadawdkajbdjkawduadauidauidgadiuadiadgawuidagdiuwagdwaidawdiagdiadgwiudgbahjsmd
-<p>
-<img src="https://media.vandal.net/i/1280x720/12-2021/2021121511551417_1.jpg">
-<p>
-hola como estas
+<marquee width=100% direccion=right bgcolor=red behavior=run scrolldelay=30 loop=infinite<
+<h1><b><font color=white>BIEN<font color=aqua>VENIDOS<font color=lightgreen> A <font color=yellow>MAX<font color=lightgreen>SHOP♠</font></b></h1>
+</marquee>
+<b><font cite="calibri" size=5</font>
+<b><font color=red size=19><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>¡Rangos<font color=fushsia> Y Mas!</font><d</div>
+<div align=center><font color=white>Aqui puedes encontrar varios tipos de rangos y de cosmeticos para el servidor de</p></div>
+<div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b>
+
