--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <b><font cite="calibri" size=5</font>
 <b><font color=red size=19><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>¡Rangos<font color=fushsia> Y Mas!</font><d</div>
 <div align=center><font color=white>Aqui puedes encontrar varios tipos de rangos y de cosmeticos para el servidor de</p></div>
-<div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b>
+<div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b><p>
+<img src="https://pbs.twimg.com/profile_banners/748685203330125824/1601800936/1500x500">
 
