--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
 </head>
 <body>
 <font face="calibri" size=8</font>
-<marquee width=100% direccion=right bgcolor=red behavior=run scrolldelay=30 loop=infinite<
+<marquee width=100% direccion=right bgcolor=red behavior=run scrolldelay=25% loop=infinite>
 <h1><b><font color=white>BIEN<font color=aqua>VENIDOS<font color=lightgreen> A <font color=yellow>MAX<font color=lightgreen>SHOP♠</font></b></h1>
 </marquee>
 <b><font cite="calibri" size=5</font>
-<b><font color=red size=19><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>¡Rangos<font color=fushsia> Y Mas!</font><d</div>
+<b><font color=red size=10><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>¡Rangos<font color=fushsia> Y Mas!</font><d</div>
 <div align=center><font color=white>Aqui puedes encontrar varios tipos de rangos y de cosmeticos para el servidor de</p></div>
 <div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b><p>
-<img src="https://pbs.twimg.com/profile_banners/748685203330125824/1601800936/1500x500">
+<p><img src="https://pbs.twimg.com/profile_banners/748685203330125824/1601800936/1500x500"></p>
+<h3><font color=yellow>RANGOS</b></font></h3>
+<form><div align=center><cite class="animated infinite fadeIn"><img src="rang.png" widht=20% height=20%><p></form></marquee>
+<form><p><br><a href="index.html"><img src="mini.png" widht=8% height=8%></br></form></p>
+<form><a href="index.html"><img src="you.png" widht=15% height=8%><p></form>
+<form><a href="index.html"><img src="fam.png" widht=8% height=8%><p></form>
 
