--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <body bgcolor=orange>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-<title>quien?</title>
+<title>MADMAX</title>
 </head>
 <body>
 <font face="calibri" size=8</font>
@@ -10,13 +10,19 @@
 <h1><b><font color=white>BIEN<font color=aqua>VENIDOS<font color=lightgreen> A <font color=yellow>MAX<font color=lightgreen>SHOP♠</font></b></h1>
 </marquee>
 <b><font cite="calibri" size=5</font>
-<b><font color=red size=10><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>¡Rangos<font color=fushsia> Y Mas!</font><d</div>
-<div align=center><font color=white>Aqui puedes encontrar varios tipos de rangos y de cosmeticos para el servidor de</p></div>
-<div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b><p>
-<p><img src="https://pbs.twimg.com/profile_banners/748685203330125824/1601800936/1500x500"></p>
-<h3><font color=yellow>RANGOS</b></font></h3>
-<form><div align=center><cite class="animated infinite fadeIn"><img src="rang.png" widht=20% height=20%><p></form></marquee>
-<form><p><br><a href="index.html"><img src="mini.png" widht=8% height=8%></br></form></p>
-<form><a href="index.html"><img src="you.png" widht=15% height=8%><p></form>
-<form><a href="index.html"><img src="fam.png" widht=8% height=8%><p></form>
-
+<b><font color=red size=10><div align=center><cite class="animated infinite fadeIn"><font color=fushsia>Rangos<font color=fushsia> Y Mas!</font></b>
+<div align=center><font color=white>Aqui puedes encontrar varios tipos de rangos y de cosmeticos para el servidor de</p>
+<div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b><p></div align>
+</div align>
+<p><div align=left><cite><img src="https://images.vectorhq.com/images/previews/3f6/creeper-minecraft-psd-413923.png" width=20%></p></cite></div align>
+<p><img src="https://static.wikia.nocookie.net/madmax/images/b/bc/Mad_Max_%28logo%29.png/revision/latest?cb=20150909112420&path-prefix=es"></p>
+<h3><font color=yellow></b></font></h3>
+<div align=center><form><div align=center><cite class="animated infinite fadeIn"><img src="https://2.bp.blogspot.com/-ebJWqKFqVmY/T-1Obvz6D7I/AAAAAAAAVdY/oemyVQuBe38/s1600/3+%282%29.png" widht=20% height=20%><p></form></marquee></div align>
+<p><b><font color=cyan size=15>SECCIóN DE RANGOS</p></font></b>
+<form><p><br><a href="index.html"><img src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/servers/mobile-servers-hub-1.png" widht=20% height=20%></br></form></p></a href></div align>
+<h4><font face=calibri size=15>RANGO BASICO</h4></font>
+<form><a href="index.html"><img src="https://icon-library.com/images/minecraft-png-icon/minecraft-png-icon-24.jpg" widht=20% height=20%><p></form></a href>
+<h4><font face=calibri size=15><font color=red>RANGO GOLD</h4></font>
+<form><a href="index.html"><img src="https://cdna.artstation.com/p/assets/images/images/010/412/374/large/victycoon-art-logo-m-p262.jpg?1524275330" width=18% height=20%><p></form></a href>
+<h4><font face=calibri width=15><font color=white>RANGO MAD</h4></font></div align></a href>
+<cite><font color=white size=10>Hecho por: JUNIOR POCASANGRE</cite></font>
