--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3><font color=yellow></b></font></h3>
 <div align=center><form><div align=center><cite class="animated infinite fadeIn"><img src="https://2.bp.blogspot.com/-ebJWqKFqVmY/T-1Obvz6D7I/AAAAAAAAVdY/oemyVQuBe38/s1600/3+%282%29.png" widht=20% height=20%><p></form></marquee></div align>
 <p><b><font color=cyan size=15>SECCIóN DE RANGOS</p></font></b>
-<form><p><br><a href="index.html"><img src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/servers/mobile-servers-hub-1.png" widht=20% height=20%></br></form></p></a href></div align>
+<form><p><br><a href="https://www.youtube.com/channel/UChvkwktOioaEW-Y7Bl_in8g"><img src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/servers/mobile-servers-hub-1.png" widht=20% height=20%></br></form></p></a href></div align>
 <h4><font face=calibri size=15>RANGO BASICO</h4></font>
 <form><a href="index.html"><img src="https://icon-library.com/images/minecraft-png-icon/minecraft-png-icon-24.jpg" widht=35% height=20%><p></form></a href>
 <h4><font face=calibri size=15><font color=red>RANGO GOLD</h4></font>
