--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div align=center><b><font color=red size=20>MAD<font color=yellow>MAX</b></b><p></div align>
 </div align>
 <p><div align=left><cite><img src="https://images.vectorhq.com/images/previews/3f6/creeper-minecraft-psd-413923.png" width=20%></p></cite></div align>
-<p><img src="https://mobile.twitter.com/mad200014/status/1498936629356077057/photo/1" width=30%></p>
+<p><img src="https://pbs.twimg.com/media/FM3rSJTXIBMAmF3?format=jpg&name=small" width=50%></p>
 <h3><font color=yellow></b></font></h3>
 <div align=center><form><div align=center><cite class="animated infinite fadeIn"><img src="https://2.bp.blogspot.com/-ebJWqKFqVmY/T-1Obvz6D7I/AAAAAAAAVdY/oemyVQuBe38/s1600/3+%282%29.png" widht=20% height=20%><p></form></marquee></div align>
 <p><b><font color=cyan size=15>SECCIóN DE RANGOS</p></font></b>
@@ -26,3 +26,5 @@
 <form><a href="index.html"><img src="https://cdna.artstation.com/p/assets/images/images/010/412/374/large/victycoon-art-logo-m-p262.jpg?1524275330" width=18% height=20%><p></form></a href>
 <h4><font face=calibri width=15><font color=white>RANGO MAD</h4></font></div align></a href>
 <cite><font color=white size=5>Hecho por: JUNIOR POCASANGRE</cite></font>
+
+
