--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 <h3><font color=yellow></b></font></h3>
 <div align=center><form><div align=center><cite class="animated infinite fadeIn"><img src="https://2.bp.blogspot.com/-ebJWqKFqVmY/T-1Obvz6D7I/AAAAAAAAVdY/oemyVQuBe38/s1600/3+%282%29.png" widht=20% height=20%><p></form></marquee></div align>
 <p><b><font color=cyan size=15>SECCIóN DE RANGOS</p></font></b>
-<form><p><br><a href="https://www.youtube.com/channel/UChvkwktOioaEW-Y7Bl_in8g"><img src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/servers/mobile-servers-hub-1.png" widht=20% height=20%></br></form></p></a href></div align>
+<form><p><br><a target=_blank href="https://pocasangre00.github.io/hosting/"><img src="https://www.minecraft.net/etc.clientlibs/minecraft/clientlibs/main/resources/img/servers/mobile-servers-hub-1.png" widht=20% height=20%></br></form></p></a href></div align>
 <h4><font face=calibri size=15>RANGO BASICO</h4></font>
 <form><a href="index.html"><img src="https://icon-library.com/images/minecraft-png-icon/minecraft-png-icon-24.jpg" widht=35% height=20%><p></form></a href>
 <h4><font face=calibri size=15><font color=red>RANGO GOLD</h4></font>
 <form><a href="index.html"><img src="https://cdna.artstation.com/p/assets/images/images/010/412/374/large/victycoon-art-logo-m-p262.jpg?1524275330" width=18% height=20%><p></form></a href>
 <h4><font face=calibri width=15><font color=white>RANGO MAD</h4></font></div align></a href>
-<cite><font color=white size=5>Hecho por: JUNIOR POCASANGRE</cite></font>
+<cite><font color=white size=5>Hecho por:<font color=yellow>JuniorPocasangre</cite></font> <p><font color=black size=5><cite>Suscribete a mi canal de <b><font color=white>You<font color=red>Tube</font></p></cite></b>
+<a target=_blank href=https://www.youtube.com/channel/UChvkwktOioaEW-Y7Bl_in8g><img src=https://yt3.ggpht.com/ytc/AKedOLTg1Z7u7sJYflSUwCTaqXtqNSTMAix9N8x6PLOFFg=s600-c-k-c0x00ffffff-no-rj-rp-mo width=60><font color=white></a><-------Click a la imagen</a></p>
 
 
